--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,16 @@
   pointer-events: none;
 }
 
+.regForm{
+  margin: auto;
+  width: fit-content;
+  margin-top: 12rem;
+}
+
+.submitBtn{
+  font-family: 'Roboto' !important;
+  font-size:  1rem !important;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
