--- a/src/components/App.css
+++ b/src/components/App.css
@@ -17,6 +17,13 @@
   font-family: 'Roboto' !important;
   font-size:  1rem !important;
 }
+.qrContainer{
+  margin-top:100px;
+  height: 250px;
+}
+.qrContainer > div, .qrContainer>div >video{
+  height: 67% !important;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
