--- a/src/components/App.css
+++ b/src/components/App.css
@@ -19,10 +19,15 @@
 }
 .qrContainer{
   margin-top:100px;
-  height: 250px;
+  height: 400px;
 }
-.qrContainer > div, .qrContainer>div >video{
+/* .qrContainer > div, .qrContainer>div >video{
   height: 67% !important;
+} */
+
+.qrResult{
+  margin-top: 100px;
+  font-size: 2rem;
 }
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
