--- a/src/components/App.css
+++ b/src/components/App.css
@@ -21,6 +21,13 @@
   margin-top:100px;
   height: 400px;
 }
+.card{
+  margin: 5rem auto;
+  padding: 10px;
+  border-radius: 3% 3% 3% 3% / 3% 3% 3% 3%;
+  border: 1px solid #c9c4c4;
+  width: fit-content;
+}
 /* .qrContainer > div, .qrContainer>div >video{
   height: 67% !important;
 } */
@@ -28,6 +35,11 @@
 .qrResult{
   margin-top: 100px;
   font-size: 2rem;
+}
+@media screen and  (max-width:425px){
+  .card{
+    width: 95%;
+  }
 }
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
