--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,6 @@
+*{
+  font-family: "Montserrat", "Roboto","Helvetica","Arial",sans-serif !important;
+}
 .App {
   text-align: center;
 }
@@ -11,6 +14,10 @@
   margin: auto;
   width: fit-content;
   margin-top: 12rem;
+}
+.textInput > div > input{
+  padding: 10px !important;
+  width: 200px !important;
 }
 
 .regSnack{
