--- a/src/components/App.css
+++ b/src/components/App.css
@@ -48,14 +48,15 @@
   margin-top: 100px;
   font-size: 2rem;
 }
+
+.createUserForm{
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 @media screen and  (max-width:425px){
   .card{
     width: 95%;
-  }
-}
-@media screen and (min-width: 968px){
-  .createFormUser{
-    margin-top: -6rem;
   }
 }
 @media (prefers-reduced-motion: no-preference) {
