--- a/src/components/App.css
+++ b/src/components/App.css
@@ -28,7 +28,7 @@
  margin-top: 15px;
  position: fixed !important;
  left: auto !important;
- top: 24px !important; 
+ top: 55px !important; 
  right: 24px !important; 
  bottom: unset !important; 
 }
@@ -62,6 +62,10 @@
 @media screen and  (max-width:425px){
   .card{
     width: 95%;
+  }
+
+  .regSnack{
+    top: 24px !important;
   }
 }
 @media (prefers-reduced-motion: no-preference) {
