--- a/src/components/App.css
+++ b/src/components/App.css
@@ -74,6 +74,12 @@
   }
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .App-link {
   color: #61dafb;
 }
